4/PL/Generación Código - Optativa/y.output
State 75 conflicts: 1 shift/reduce


Grammar

    0 $accept: programa $end

    1 $@1: %empty

    2 programa: PRINCIPAL $@1 bloque

    3 $@2: %empty

    4 bloque: ABRE_LLAVE $@2 declar_de_variables_locales declar_de_subprogs sentencias CIERRA_LLAVE

    5 declar_de_subprogs: declar_de_subprogs declar_subprograma
    6                   | %empty

    7 $@3: %empty

    8 declar_subprograma: cabecera_subprograma $@3 bloque

    9 declar_de_variables_locales: DECLARACION variables_locales FINDECLARACION
   10                            | %empty

   11 variables_locales: variables_locales cuerpo_declar_variables
   12                  | cuerpo_declar_variables

   13 $@4: %empty

   14 cuerpo_declar_variables: tipo_t $@4 lista_id PUNTO_COMA
   15                        | error

   16 lista_id: IDENTIFICADOR
   17         | lista_id COMA IDENTIFICADOR
   18         | lista_id error IDENTIFICADOR

   19 $@5: %empty

   20 cabecera_subprograma: tipo_t IDENTIFICADOR $@5 ABRE_PAREN lista_parametros CIERRA_PAREN

   21 lista_parametros: parametro

   22 $@6: %empty

   23 lista_parametros: lista_parametros COMA $@6 parametro
   24                 | lista_parametros error IDENTIFICADOR
   25                 | %empty

   26 parametro: tipo_t IDENTIFICADOR

   27 sentencias: sentencias sentencia
   28           | sentencia

   29 sentencia: bloque
   30          | sentencia_asignacion
   31          | sentencia_if
   32          | sentencia_while
   33          | sentencia_entrada
   34          | sentencia_salida
   35          | sentencia_repeat_until
   36          | sentencia_return_comienzo_lista
   37          | avanzar_retroceder_lista

   38 sentencia_asignacion: IDENTIFICADOR ASIGNACION expresion PUNTO_COMA

   39 condicion_if: SI ABRE_PAREN expresion CIERRA_PAREN

   40 sentencia_if: condicion_if sentencia

   41 $@7: %empty

   42 sentencia_if: condicion_if sentencia SINO $@7 sentencia

   43 $@8: %empty

   44 $@9: %empty

   45 sentencia_while: MIENTRAS $@8 ABRE_PAREN expresion CIERRA_PAREN $@9 sentencia

   46 sentencia_entrada: LEER lista_leer PUNTO_COMA

   47 lista_leer: IDENTIFICADOR
   48           | lista_leer COMA IDENTIFICADOR
   49           | lista_leer error IDENTIFICADOR

   50 sentencia_salida: ESCRIBIR lista_expresiones_o_cadena PUNTO_COMA

   51 lista_expresiones_o_cadena: expr_cad
   52                           | lista_expresiones_o_cadena COMA expr_cad

   53 expr_cad: expresion
   54         | CADENA

   55 $@10: %empty

   56 sentencia_repeat_until: REPETIR $@10 sentencia HASTA ABRE_PAREN expresion CIERRA_PAREN PUNTO_COMA

   57 sentencia_return_comienzo_lista: DEVOLVER_DOLAR expresion PUNTO_COMA

   58 avanzar_retroceder_lista: expresion DESPLAZA PUNTO_COMA

   59 expresion: ABRE_PAREN expresion CIERRA_PAREN
   60          | MAS_MENOS expresion
   61          | OP_UNARIO expresion
   62          | expresion OP_TERNARIO1 expresion ARROBA expresion
   63          | expresion ARROBA expresion
   64          | expresion OP_BINARIO expresion
   65          | expresion OP_RELACIONAL_IGUALDAD expresion
   66          | expresion OP_RELACIONAL_AND expresion
   67          | expresion OP_RELACIONAL_OR expresion
   68          | expresion OP_RELACIONAL expresion
   69          | expresion MAS_MENOS expresion
   70          | IDENTIFICADOR
   71          | CONSTANTE
   72          | funcion
   73          | agregado_lista
   74          | error

   75 funcion: IDENTIFICADOR ABRE_PAREN lista_f CIERRA_PAREN
   76        | IDENTIFICADOR ABRE_PAREN CIERRA_PAREN

   77 tipo_t: TIPO
   78       | LISTA_DE TIPO

   79 agregado_lista: ABRE_CORCHETE lista CIERRA_CORCHETE

   80 lista_f: expresion
   81        | lista_f COMA expresion

   82 lista: expresion
   83      | lista COMA expresion


Terminals, with rules where they appear

$end (0) 0
error (256) 15 18 24 49 74
DECLARACION (258) 9
FINDECLARACION (259) 9
PRINCIPAL (260) 2
ABRE_LLAVE (261) 4
CIERRA_LLAVE (262) 4
PUNTO_COMA (263) 14 38 46 50 56 57 58
ABRE_PAREN (264) 20 39 45 56 59 75 76
CIERRA_PAREN (265) 20 39 45 56 59 75 76
DESPLAZA (266) 58
DEVOLVER_DOLAR (267) 57
REPETIR (268) 56
HASTA (269) 56
ASIGNACION (270) 38
SI (271) 39
SINO (272) 42
MIENTRAS (273) 45
LEER (274) 46
ESCRIBIR (275) 50
LISTA_DE (276) 78
TIPO (277) 77 78
CONSTANTE (278) 71
IDENTIFICADOR (279) 16 17 18 20 24 26 38 47 48 49 70 75 76
CADENA (280) 54
COMA (281) 17 23 48 52 81 83
ABRE_CORCHETE (282) 79
CIERRA_CORCHETE (283) 79
OP_TERNARIO1 (284) 62
OP_RELACIONAL_OR (285) 67
OP_RELACIONAL_AND (286) 66
OP_RELACIONAL_IGUALDAD (287) 65
OP_RELACIONAL (288) 68
MAS_MENOS (289) 60 69
OP_BINARIO (290) 64
ARROBA (291) 62 63
OP_UNARIO (292) 61


Nonterminals, with rules where they appear

$accept (38)
    on left: 0
programa (39)
    on left: 2, on right: 0
$@1 (40)
    on left: 1, on right: 2
bloque (41)
    on left: 4, on right: 2 8 29
$@2 (42)
    on left: 3, on right: 4
declar_de_subprogs (43)
    on left: 5 6, on right: 4 5
declar_subprograma (44)
    on left: 8, on right: 5
$@3 (45)
    on left: 7, on right: 8
declar_de_variables_locales (46)
    on left: 9 10, on right: 4
variables_locales (47)
    on left: 11 12, on right: 9 11
cuerpo_declar_variables (48)
    on left: 14 15, on right: 11 12
$@4 (49)
    on left: 13, on right: 14
lista_id (50)
    on left: 16 17 18, on right: 14 17 18
cabecera_subprograma (51)
    on left: 20, on right: 8
$@5 (52)
    on left: 19, on right: 20
lista_parametros (53)
    on left: 21 23 24 25, on right: 20 23 24
$@6 (54)
    on left: 22, on right: 23
parametro (55)
    on left: 26, on right: 21 23
sentencias (56)
    on left: 27 28, on right: 4 27
sentencia (57)
    on left: 29 30 31 32 33 34 35 36 37, on right: 27 28 40 42 45 56
sentencia_asignacion (58)
    on left: 38, on right: 30
condicion_if (59)
    on left: 39, on right: 40 42
sentencia_if (60)
    on left: 40 42, on right: 31
$@7 (61)
    on left: 41, on right: 42
sentencia_while (62)
    on left: 45, on right: 32
$@8 (63)
    on left: 43, on right: 45
$@9 (64)
    on left: 44, on right: 45
sentencia_entrada (65)
    on left: 46, on right: 33
lista_leer (66)
    on left: 47 48 49, on right: 46 48 49
sentencia_salida (67)
    on left: 50, on right: 34
lista_expresiones_o_cadena (68)
    on left: 51 52, on right: 50 52
expr_cad (69)
    on left: 53 54, on right: 51 52
sentencia_repeat_until (70)
    on left: 56, on right: 35
$@10 (71)
    on left: 55, on right: 56
sentencia_return_comienzo_lista (72)
    on left: 57, on right: 36
avanzar_retroceder_lista (73)
    on left: 58, on right: 37
expresion (74)
    on left: 59 60 61 62 63 64 65 66 67 68 69 70 71 72 73 74, on right:
    38 39 45 53 56 57 58 59 60 61 62 63 64 65 66 67 68 69 80 81 82
    83
funcion (75)
    on left: 75 76, on right: 72
tipo_t (76)
    on left: 77 78, on right: 14 20 26
agregado_lista (77)
    on left: 79, on right: 73
lista_f (78)
    on left: 80 81, on right: 75 81
lista (79)
    on left: 82 83, on right: 79 83


State 0

    0 $accept: . programa $end

    PRINCIPAL  shift, and go to state 1

    programa  go to state 2


State 1

    2 programa: PRINCIPAL . $@1 bloque

    $default  reduce using rule 1 ($@1)

    $@1  go to state 3


State 2

    0 $accept: programa . $end

    $end  shift, and go to state 4


State 3

    2 programa: PRINCIPAL $@1 . bloque

    ABRE_LLAVE  shift, and go to state 5

    bloque  go to state 6


State 4

    0 $accept: programa $end .

    $default  accept


State 5

    4 bloque: ABRE_LLAVE . $@2 declar_de_variables_locales declar_de_subprogs sentencias CIERRA_LLAVE

    $default  reduce using rule 3 ($@2)

    $@2  go to state 7


State 6

    2 programa: PRINCIPAL $@1 bloque .

    $default  reduce using rule 2 (programa)


State 7

    4 bloque: ABRE_LLAVE $@2 . declar_de_variables_locales declar_de_subprogs sentencias CIERRA_LLAVE

    DECLARACION  shift, and go to state 8

    $default  reduce using rule 10 (declar_de_variables_locales)

    declar_de_variables_locales  go to state 9


State 8

    9 declar_de_variables_locales: DECLARACION . variables_locales FINDECLARACION

    error     shift, and go to state 10
    LISTA_DE  shift, and go to state 11
    TIPO      shift, and go to state 12

    variables_locales        go to state 13
    cuerpo_declar_variables  go to state 14
    tipo_t                   go to state 15


State 9

    4 bloque: ABRE_LLAVE $@2 declar_de_variables_locales . declar_de_subprogs sentencias CIERRA_LLAVE

    $default  reduce using rule 6 (declar_de_subprogs)

    declar_de_subprogs  go to state 16


State 10

   15 cuerpo_declar_variables: error .

    $default  reduce using rule 15 (cuerpo_declar_variables)


State 11

   78 tipo_t: LISTA_DE . TIPO

    TIPO  shift, and go to state 17


State 12

   77 tipo_t: TIPO .

    $default  reduce using rule 77 (tipo_t)


State 13

    9 declar_de_variables_locales: DECLARACION variables_locales . FINDECLARACION
   11 variables_locales: variables_locales . cuerpo_declar_variables

    error           shift, and go to state 10
    FINDECLARACION  shift, and go to state 18
    LISTA_DE        shift, and go to state 11
    TIPO            shift, and go to state 12

    cuerpo_declar_variables  go to state 19
    tipo_t                   go to state 15


State 14

   12 variables_locales: cuerpo_declar_variables .

    $default  reduce using rule 12 (variables_locales)


State 15

   14 cuerpo_declar_variables: tipo_t . $@4 lista_id PUNTO_COMA

    $default  reduce using rule 13 ($@4)

    $@4  go to state 20


State 16

    4 bloque: ABRE_LLAVE $@2 declar_de_variables_locales declar_de_subprogs . sentencias CIERRA_LLAVE
    5 declar_de_subprogs: declar_de_subprogs . declar_subprograma

    error           shift, and go to state 21
    ABRE_LLAVE      shift, and go to state 5
    ABRE_PAREN      shift, and go to state 22
    DEVOLVER_DOLAR  shift, and go to state 23
    REPETIR         shift, and go to state 24
    SI              shift, and go to state 25
    MIENTRAS        shift, and go to state 26
    LEER            shift, and go to state 27
    ESCRIBIR        shift, and go to state 28
    LISTA_DE        shift, and go to state 11
    TIPO            shift, and go to state 12
    CONSTANTE       shift, and go to state 29
    IDENTIFICADOR   shift, and go to state 30
    ABRE_CORCHETE   shift, and go to state 31
    MAS_MENOS       shift, and go to state 32
    OP_UNARIO       shift, and go to state 33

    bloque                           go to state 34
    declar_subprograma               go to state 35
    cabecera_subprograma             go to state 36
    sentencias                       go to state 37
    sentencia                        go to state 38
    sentencia_asignacion             go to state 39
    condicion_if                     go to state 40
    sentencia_if                     go to state 41
    sentencia_while                  go to state 42
    sentencia_entrada                go to state 43
    sentencia_salida                 go to state 44
    sentencia_repeat_until           go to state 45
    sentencia_return_comienzo_lista  go to state 46
    avanzar_retroceder_lista         go to state 47
    expresion                        go to state 48
    funcion                          go to state 49
    tipo_t                           go to state 50
    agregado_lista                   go to state 51


State 17

   78 tipo_t: LISTA_DE TIPO .

    $default  reduce using rule 78 (tipo_t)


State 18

    9 declar_de_variables_locales: DECLARACION variables_locales FINDECLARACION .

    $default  reduce using rule 9 (declar_de_variables_locales)


State 19

   11 variables_locales: variables_locales cuerpo_declar_variables .

    $default  reduce using rule 11 (variables_locales)


State 20

   14 cuerpo_declar_variables: tipo_t $@4 . lista_id PUNTO_COMA

    IDENTIFICADOR  shift, and go to state 52

    lista_id  go to state 53


State 21

   74 expresion: error .

    $default  reduce using rule 74 (expresion)


State 22

   59 expresion: ABRE_PAREN . expresion CIERRA_PAREN

    error          shift, and go to state 21
    ABRE_PAREN     shift, and go to state 22
    CONSTANTE      shift, and go to state 29
    IDENTIFICADOR  shift, and go to state 54
    ABRE_CORCHETE  shift, and go to state 31
    MAS_MENOS      shift, and go to state 32
    OP_UNARIO      shift, and go to state 33

    expresion       go to state 55
    funcion         go to state 49
    agregado_lista  go to state 51


State 23

   57 sentencia_return_comienzo_lista: DEVOLVER_DOLAR . expresion PUNTO_COMA

    error          shift, and go to state 21
    ABRE_PAREN     shift, and go to state 22
    CONSTANTE      shift, and go to state 29
    IDENTIFICADOR  shift, and go to state 54
    ABRE_CORCHETE  shift, and go to state 31
    MAS_MENOS      shift, and go to state 32
    OP_UNARIO      shift, and go to state 33

    expresion       go to state 56
    funcion         go to state 49
    agregado_lista  go to state 51


State 24

   56 sentencia_repeat_until: REPETIR . $@10 sentencia HASTA ABRE_PAREN expresion CIERRA_PAREN PUNTO_COMA

    $default  reduce using rule 55 ($@10)

    $@10  go to state 57


State 25

   39 condicion_if: SI . ABRE_PAREN expresion CIERRA_PAREN

    ABRE_PAREN  shift, and go to state 58


State 26

   45 sentencia_while: MIENTRAS . $@8 ABRE_PAREN expresion CIERRA_PAREN $@9 sentencia

    $default  reduce using rule 43 ($@8)

    $@8  go to state 59


State 27

   46 sentencia_entrada: LEER . lista_leer PUNTO_COMA

    IDENTIFICADOR  shift, and go to state 60

    lista_leer  go to state 61


State 28

   50 sentencia_salida: ESCRIBIR . lista_expresiones_o_cadena PUNTO_COMA

    error          shift, and go to state 21
    ABRE_PAREN     shift, and go to state 22
    CONSTANTE      shift, and go to state 29
    IDENTIFICADOR  shift, and go to state 54
    CADENA         shift, and go to state 62
    ABRE_CORCHETE  shift, and go to state 31
    MAS_MENOS      shift, and go to state 32
    OP_UNARIO      shift, and go to state 33

    lista_expresiones_o_cadena  go to state 63
    expr_cad                    go to state 64
    expresion                   go to state 65
    funcion                     go to state 49
    agregado_lista              go to state 51


State 29

   71 expresion: CONSTANTE .

    $default  reduce using rule 71 (expresion)


State 30

   38 sentencia_asignacion: IDENTIFICADOR . ASIGNACION expresion PUNTO_COMA
   70 expresion: IDENTIFICADOR .
   75 funcion: IDENTIFICADOR . ABRE_PAREN lista_f CIERRA_PAREN
   76        | IDENTIFICADOR . ABRE_PAREN CIERRA_PAREN

    ABRE_PAREN  shift, and go to state 66
    ASIGNACION  shift, and go to state 67

    $default  reduce using rule 70 (expresion)


State 31

   79 agregado_lista: ABRE_CORCHETE . lista CIERRA_CORCHETE

    error          shift, and go to state 21
    ABRE_PAREN     shift, and go to state 22
    CONSTANTE      shift, and go to state 29
    IDENTIFICADOR  shift, and go to state 54
    ABRE_CORCHETE  shift, and go to state 31
    MAS_MENOS      shift, and go to state 32
    OP_UNARIO      shift, and go to state 33

    expresion       go to state 68
    funcion         go to state 49
    agregado_lista  go to state 51
    lista           go to state 69


State 32

   60 expresion: MAS_MENOS . expresion

    error          shift, and go to state 21
    ABRE_PAREN     shift, and go to state 22
    CONSTANTE      shift, and go to state 29
    IDENTIFICADOR  shift, and go to state 54
    ABRE_CORCHETE  shift, and go to state 31
    MAS_MENOS      shift, and go to state 32
    OP_UNARIO      shift, and go to state 33

    expresion       go to state 70
    funcion         go to state 49
    agregado_lista  go to state 51


State 33

   61 expresion: OP_UNARIO . expresion

    error          shift, and go to state 21
    ABRE_PAREN     shift, and go to state 22
    CONSTANTE      shift, and go to state 29
    IDENTIFICADOR  shift, and go to state 54
    ABRE_CORCHETE  shift, and go to state 31
    MAS_MENOS      shift, and go to state 32
    OP_UNARIO      shift, and go to state 33

    expresion       go to state 71
    funcion         go to state 49
    agregado_lista  go to state 51


State 34

   29 sentencia: bloque .

    $default  reduce using rule 29 (sentencia)


State 35

    5 declar_de_subprogs: declar_de_subprogs declar_subprograma .

    $default  reduce using rule 5 (declar_de_subprogs)


State 36

    8 declar_subprograma: cabecera_subprograma . $@3 bloque

    $default  reduce using rule 7 ($@3)

    $@3  go to state 72


State 37

    4 bloque: ABRE_LLAVE $@2 declar_de_variables_locales declar_de_subprogs sentencias . CIERRA_LLAVE
   27 sentencias: sentencias . sentencia

    error           shift, and go to state 21
    ABRE_LLAVE      shift, and go to state 5
    CIERRA_LLAVE    shift, and go to state 73
    ABRE_PAREN      shift, and go to state 22
    DEVOLVER_DOLAR  shift, and go to state 23
    REPETIR         shift, and go to state 24
    SI              shift, and go to state 25
    MIENTRAS        shift, and go to state 26
    LEER            shift, and go to state 27
    ESCRIBIR        shift, and go to state 28
    CONSTANTE       shift, and go to state 29
    IDENTIFICADOR   shift, and go to state 30
    ABRE_CORCHETE   shift, and go to state 31
    MAS_MENOS       shift, and go to state 32
    OP_UNARIO       shift, and go to state 33

    bloque                           go to state 34
    sentencia                        go to state 74
    sentencia_asignacion             go to state 39
    condicion_if                     go to state 40
    sentencia_if                     go to state 41
    sentencia_while                  go to state 42
    sentencia_entrada                go to state 43
    sentencia_salida                 go to state 44
    sentencia_repeat_until           go to state 45
    sentencia_return_comienzo_lista  go to state 46
    avanzar_retroceder_lista         go to state 47
    expresion                        go to state 48
    funcion                          go to state 49
    agregado_lista                   go to state 51


State 38

   28 sentencias: sentencia .

    $default  reduce using rule 28 (sentencias)


State 39

   30 sentencia: sentencia_asignacion .

    $default  reduce using rule 30 (sentencia)


State 40

   40 sentencia_if: condicion_if . sentencia
   42             | condicion_if . sentencia SINO $@7 sentencia

    error           shift, and go to state 21
    ABRE_LLAVE      shift, and go to state 5
    ABRE_PAREN      shift, and go to state 22
    DEVOLVER_DOLAR  shift, and go to state 23
    REPETIR         shift, and go to state 24
    SI              shift, and go to state 25
    MIENTRAS        shift, and go to state 26
    LEER            shift, and go to state 27
    ESCRIBIR        shift, and go to state 28
    CONSTANTE       shift, and go to state 29
    IDENTIFICADOR   shift, and go to state 30
    ABRE_CORCHETE   shift, and go to state 31
    MAS_MENOS       shift, and go to state 32
    OP_UNARIO       shift, and go to state 33

    bloque                           go to state 34
    sentencia                        go to state 75
    sentencia_asignacion             go to state 39
    condicion_if                     go to state 40
    sentencia_if                     go to state 41
    sentencia_while                  go to state 42
    sentencia_entrada                go to state 43
    sentencia_salida                 go to state 44
    sentencia_repeat_until           go to state 45
    sentencia_return_comienzo_lista  go to state 46
    avanzar_retroceder_lista         go to state 47
    expresion                        go to state 48
    funcion                          go to state 49
    agregado_lista                   go to state 51


State 41

   31 sentencia: sentencia_if .

    $default  reduce using rule 31 (sentencia)


State 42

   32 sentencia: sentencia_while .

    $default  reduce using rule 32 (sentencia)


State 43

   33 sentencia: sentencia_entrada .

    $default  reduce using rule 33 (sentencia)


State 44

   34 sentencia: sentencia_salida .

    $default  reduce using rule 34 (sentencia)


State 45

   35 sentencia: sentencia_repeat_until .

    $default  reduce using rule 35 (sentencia)


State 46

   36 sentencia: sentencia_return_comienzo_lista .

    $default  reduce using rule 36 (sentencia)


State 47

   37 sentencia: avanzar_retroceder_lista .

    $default  reduce using rule 37 (sentencia)


State 48

   58 avanzar_retroceder_lista: expresion . DESPLAZA PUNTO_COMA
   62 expresion: expresion . OP_TERNARIO1 expresion ARROBA expresion
   63          | expresion . ARROBA expresion
   64          | expresion . OP_BINARIO expresion
   65          | expresion . OP_RELACIONAL_IGUALDAD expresion
   66          | expresion . OP_RELACIONAL_AND expresion
   67          | expresion . OP_RELACIONAL_OR expresion
   68          | expresion . OP_RELACIONAL expresion
   69          | expresion . MAS_MENOS expresion

    DESPLAZA                shift, and go to state 76
    OP_TERNARIO1            shift, and go to state 77
    OP_RELACIONAL_OR        shift, and go to state 78
    OP_RELACIONAL_AND       shift, and go to state 79
    OP_RELACIONAL_IGUALDAD  shift, and go to state 80
    OP_RELACIONAL           shift, and go to state 81
    MAS_MENOS               shift, and go to state 82
    OP_BINARIO              shift, and go to state 83
    ARROBA                  shift, and go to state 84


State 49

   72 expresion: funcion .

    $default  reduce using rule 72 (expresion)


State 50

   20 cabecera_subprograma: tipo_t . IDENTIFICADOR $@5 ABRE_PAREN lista_parametros CIERRA_PAREN

    IDENTIFICADOR  shift, and go to state 85


State 51

   73 expresion: agregado_lista .

    $default  reduce using rule 73 (expresion)


State 52

   16 lista_id: IDENTIFICADOR .

    $default  reduce using rule 16 (lista_id)


State 53

   14 cuerpo_declar_variables: tipo_t $@4 lista_id . PUNTO_COMA
   17 lista_id: lista_id . COMA IDENTIFICADOR
   18         | lista_id . error IDENTIFICADOR

    error       shift, and go to state 86
    PUNTO_COMA  shift, and go to state 87
    COMA        shift, and go to state 88


State 54

   70 expresion: IDENTIFICADOR .
   75 funcion: IDENTIFICADOR . ABRE_PAREN lista_f CIERRA_PAREN
   76        | IDENTIFICADOR . ABRE_PAREN CIERRA_PAREN

    ABRE_PAREN  shift, and go to state 66

    $default  reduce using rule 70 (expresion)


State 55

   59 expresion: ABRE_PAREN expresion . CIERRA_PAREN
   62          | expresion . OP_TERNARIO1 expresion ARROBA expresion
   63          | expresion . ARROBA expresion
   64          | expresion . OP_BINARIO expresion
   65          | expresion . OP_RELACIONAL_IGUALDAD expresion
   66          | expresion . OP_RELACIONAL_AND expresion
   67          | expresion . OP_RELACIONAL_OR expresion
   68          | expresion . OP_RELACIONAL expresion
   69          | expresion . MAS_MENOS expresion

    CIERRA_PAREN            shift, and go to state 89
    OP_TERNARIO1            shift, and go to state 77
    OP_RELACIONAL_OR        shift, and go to state 78
    OP_RELACIONAL_AND       shift, and go to state 79
    OP_RELACIONAL_IGUALDAD  shift, and go to state 80
    OP_RELACIONAL           shift, and go to state 81
    MAS_MENOS               shift, and go to state 82
    OP_BINARIO              shift, and go to state 83
    ARROBA                  shift, and go to state 84


State 56

   57 sentencia_return_comienzo_lista: DEVOLVER_DOLAR expresion . PUNTO_COMA
   62 expresion: expresion . OP_TERNARIO1 expresion ARROBA expresion
   63          | expresion . ARROBA expresion
   64          | expresion . OP_BINARIO expresion
   65          | expresion . OP_RELACIONAL_IGUALDAD expresion
   66          | expresion . OP_RELACIONAL_AND expresion
   67          | expresion . OP_RELACIONAL_OR expresion
   68          | expresion . OP_RELACIONAL expresion
   69          | expresion . MAS_MENOS expresion

    PUNTO_COMA              shift, and go to state 90
    OP_TERNARIO1            shift, and go to state 77
    OP_RELACIONAL_OR        shift, and go to state 78
    OP_RELACIONAL_AND       shift, and go to state 79
    OP_RELACIONAL_IGUALDAD  shift, and go to state 80
    OP_RELACIONAL           shift, and go to state 81
    MAS_MENOS               shift, and go to state 82
    OP_BINARIO              shift, and go to state 83
    ARROBA                  shift, and go to state 84


State 57

   56 sentencia_repeat_until: REPETIR $@10 . sentencia HASTA ABRE_PAREN expresion CIERRA_PAREN PUNTO_COMA

    error           shift, and go to state 21
    ABRE_LLAVE      shift, and go to state 5
    ABRE_PAREN      shift, and go to state 22
    DEVOLVER_DOLAR  shift, and go to state 23
    REPETIR         shift, and go to state 24
    SI              shift, and go to state 25
    MIENTRAS        shift, and go to state 26
    LEER            shift, and go to state 27
    ESCRIBIR        shift, and go to state 28
    CONSTANTE       shift, and go to state 29
    IDENTIFICADOR   shift, and go to state 30
    ABRE_CORCHETE   shift, and go to state 31
    MAS_MENOS       shift, and go to state 32
    OP_UNARIO       shift, and go to state 33

    bloque                           go to state 34
    sentencia                        go to state 91
    sentencia_asignacion             go to state 39
    condicion_if                     go to state 40
    sentencia_if                     go to state 41
    sentencia_while                  go to state 42
    sentencia_entrada                go to state 43
    sentencia_salida                 go to state 44
    sentencia_repeat_until           go to state 45
    sentencia_return_comienzo_lista  go to state 46
    avanzar_retroceder_lista         go to state 47
    expresion                        go to state 48
    funcion                          go to state 49
    agregado_lista                   go to state 51


State 58

   39 condicion_if: SI ABRE_PAREN . expresion CIERRA_PAREN

    error          shift, and go to state 21
    ABRE_PAREN     shift, and go to state 22
    CONSTANTE      shift, and go to state 29
    IDENTIFICADOR  shift, and go to state 54
    ABRE_CORCHETE  shift, and go to state 31
    MAS_MENOS      shift, and go to state 32
    OP_UNARIO      shift, and go to state 33

    expresion       go to state 92
    funcion         go to state 49
    agregado_lista  go to state 51


State 59

   45 sentencia_while: MIENTRAS $@8 . ABRE_PAREN expresion CIERRA_PAREN $@9 sentencia

    ABRE_PAREN  shift, and go to state 93


State 60

   47 lista_leer: IDENTIFICADOR .

    $default  reduce using rule 47 (lista_leer)


State 61

   46 sentencia_entrada: LEER lista_leer . PUNTO_COMA
   48 lista_leer: lista_leer . COMA IDENTIFICADOR
   49           | lista_leer . error IDENTIFICADOR

    error       shift, and go to state 94
    PUNTO_COMA  shift, and go to state 95
    COMA        shift, and go to state 96


State 62

   54 expr_cad: CADENA .

    $default  reduce using rule 54 (expr_cad)


State 63

   50 sentencia_salida: ESCRIBIR lista_expresiones_o_cadena . PUNTO_COMA
   52 lista_expresiones_o_cadena: lista_expresiones_o_cadena . COMA expr_cad

    PUNTO_COMA  shift, and go to state 97
    COMA        shift, and go to state 98


State 64

   51 lista_expresiones_o_cadena: expr_cad .

    $default  reduce using rule 51 (lista_expresiones_o_cadena)


State 65

   53 expr_cad: expresion .
   62 expresion: expresion . OP_TERNARIO1 expresion ARROBA expresion
   63          | expresion . ARROBA expresion
   64          | expresion . OP_BINARIO expresion
   65          | expresion . OP_RELACIONAL_IGUALDAD expresion
   66          | expresion . OP_RELACIONAL_AND expresion
   67          | expresion . OP_RELACIONAL_OR expresion
   68          | expresion . OP_RELACIONAL expresion
   69          | expresion . MAS_MENOS expresion

    OP_TERNARIO1            shift, and go to state 77
    OP_RELACIONAL_OR        shift, and go to state 78
    OP_RELACIONAL_AND       shift, and go to state 79
    OP_RELACIONAL_IGUALDAD  shift, and go to state 80
    OP_RELACIONAL           shift, and go to state 81
    MAS_MENOS               shift, and go to state 82
    OP_BINARIO              shift, and go to state 83
    ARROBA                  shift, and go to state 84

    $default  reduce using rule 53 (expr_cad)


State 66

   75 funcion: IDENTIFICADOR ABRE_PAREN . lista_f CIERRA_PAREN
   76        | IDENTIFICADOR ABRE_PAREN . CIERRA_PAREN

    error          shift, and go to state 21
    ABRE_PAREN     shift, and go to state 22
    CIERRA_PAREN   shift, and go to state 99
    CONSTANTE      shift, and go to state 29
    IDENTIFICADOR  shift, and go to state 54
    ABRE_CORCHETE  shift, and go to state 31
    MAS_MENOS      shift, and go to state 32
    OP_UNARIO      shift, and go to state 33

    expresion       go to state 100
    funcion         go to state 49
    agregado_lista  go to state 51
    lista_f         go to state 101


State 67

   38 sentencia_asignacion: IDENTIFICADOR ASIGNACION . expresion PUNTO_COMA

    error          shift, and go to state 21
    ABRE_PAREN     shift, and go to state 22
    CONSTANTE      shift, and go to state 29
    IDENTIFICADOR  shift, and go to state 54
    ABRE_CORCHETE  shift, and go to state 31
    MAS_MENOS      shift, and go to state 32
    OP_UNARIO      shift, and go to state 33

    expresion       go to state 102
    funcion         go to state 49
    agregado_lista  go to state 51


State 68

   62 expresion: expresion . OP_TERNARIO1 expresion ARROBA expresion
   63          | expresion . ARROBA expresion
   64          | expresion . OP_BINARIO expresion
   65          | expresion . OP_RELACIONAL_IGUALDAD expresion
   66          | expresion . OP_RELACIONAL_AND expresion
   67          | expresion . OP_RELACIONAL_OR expresion
   68          | expresion . OP_RELACIONAL expresion
   69          | expresion . MAS_MENOS expresion
   82 lista: expresion .

    OP_TERNARIO1            shift, and go to state 77
    OP_RELACIONAL_OR        shift, and go to state 78
    OP_RELACIONAL_AND       shift, and go to state 79
    OP_RELACIONAL_IGUALDAD  shift, and go to state 80
    OP_RELACIONAL           shift, and go to state 81
    MAS_MENOS               shift, and go to state 82
    OP_BINARIO              shift, and go to state 83
    ARROBA                  shift, and go to state 84

    $default  reduce using rule 82 (lista)


State 69

   79 agregado_lista: ABRE_CORCHETE lista . CIERRA_CORCHETE
   83 lista: lista . COMA expresion

    COMA             shift, and go to state 103
    CIERRA_CORCHETE  shift, and go to state 104


State 70

   60 expresion: MAS_MENOS expresion .
   62          | expresion . OP_TERNARIO1 expresion ARROBA expresion
   63          | expresion . ARROBA expresion
   64          | expresion . OP_BINARIO expresion
   65          | expresion . OP_RELACIONAL_IGUALDAD expresion
   66          | expresion . OP_RELACIONAL_AND expresion
   67          | expresion . OP_RELACIONAL_OR expresion
   68          | expresion . OP_RELACIONAL expresion
   69          | expresion . MAS_MENOS expresion

    $default  reduce using rule 60 (expresion)


State 71

   61 expresion: OP_UNARIO expresion .
   62          | expresion . OP_TERNARIO1 expresion ARROBA expresion
   63          | expresion . ARROBA expresion
   64          | expresion . OP_BINARIO expresion
   65          | expresion . OP_RELACIONAL_IGUALDAD expresion
   66          | expresion . OP_RELACIONAL_AND expresion
   67          | expresion . OP_RELACIONAL_OR expresion
   68          | expresion . OP_RELACIONAL expresion
   69          | expresion . MAS_MENOS expresion

    $default  reduce using rule 61 (expresion)


State 72

    8 declar_subprograma: cabecera_subprograma $@3 . bloque

    ABRE_LLAVE  shift, and go to state 5

    bloque  go to state 105


State 73

    4 bloque: ABRE_LLAVE $@2 declar_de_variables_locales declar_de_subprogs sentencias CIERRA_LLAVE .

    $default  reduce using rule 4 (bloque)


State 74

   27 sentencias: sentencias sentencia .

    $default  reduce using rule 27 (sentencias)


State 75

   40 sentencia_if: condicion_if sentencia .
   42             | condicion_if sentencia . SINO $@7 sentencia

    SINO  shift, and go to state 106

    SINO      [reduce using rule 40 (sentencia_if)]
    $default  reduce using rule 40 (sentencia_if)


State 76

   58 avanzar_retroceder_lista: expresion DESPLAZA . PUNTO_COMA

    PUNTO_COMA  shift, and go to state 107


State 77

   62 expresion: expresion OP_TERNARIO1 . expresion ARROBA expresion

    error          shift, and go to state 21
    ABRE_PAREN     shift, and go to state 22
    CONSTANTE      shift, and go to state 29
    IDENTIFICADOR  shift, and go to state 54
    ABRE_CORCHETE  shift, and go to state 31
    MAS_MENOS      shift, and go to state 32
    OP_UNARIO      shift, and go to state 33

    expresion       go to state 108
    funcion         go to state 49
    agregado_lista  go to state 51


State 78

   67 expresion: expresion OP_RELACIONAL_OR . expresion
